[package]
name = "image-color-canvas-world"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
http = "0.2.8"
uuid = { version = "1.1.1", features = ["v4"] }
chrono = "0.4.19"
firestore-db-and-auth = "0.6.1"
serde = "1.0.137"
